# vertex-block

./: .env.example  Dockerfile  Jenkinsfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yaml  mkdocs.yml  pyproject.toml
docs/: index.md  testing.md  tickets.md
docs/design/: api.md  architecture.md  blocklists.md  configuration.md  dns-server.md
src/vertex_block/config/: __init__.py  settings.py
tests/unit/: test_smoke.py
tests/unit/config/: test_settings.py
