[project]
name = "vertex-block"
version = "0.1.0"
description = "Network-wide ad blocking via DNS"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "mkdocs-material",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vertex_block"]
