[project]
name = "vertex-block"
version = "0.1.1"
description = "Network-wide ad blocking via DNS"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings==2.13.1"
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
    "mkdocs-material==9.7.3",
    "bump2version==1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vertex_block"]
