[project]
name = "vertex-block"
version = "0.1.2"
description = "Network-wide ad blocking via DNS"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==v1.3.0",
    "httpx==0.28.1",
    "mkdocs-material==9.7.3",
    "bump2version==v1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vertex_block"]
